fix(web-components): changes side-nav and nav-items z-index
changes side-nav and nav-items z-index to prevent incorrect overlapping of top nav and focus on nav
items being cut off

--- a/packages/web-components/src/global/variables.css
+++ b/packages/web-components/src/global/variables.css
@@ -390,12 +390,12 @@
   --ic-z-index-base-value: 0;
   --ic-z-index-page-header: calc(var(--ic-z-index-base-value) + 10);
   --ic-z-index-back-to-top: calc(var(--ic-z-index-base-value) + 20);
-  --ic-z-index-menu: calc(var(--ic-z-index-base-value) + 70);
   --ic-z-index-popover: calc(var(--ic-z-index-base-value) + 50);
-  --ic-z-index-navigation-item: calc(var(--ic-z-index-base-value) + 50);
-  --ic-z-index-navigation-menu: calc(var(--ic-z-index-base-value) + 60);
   --ic-z-index-sticky-page-header: calc(var(--ic-z-index-base-value) + 60);
-  --ic-z-index-side-navigation: calc(var(--ic-z-index-base-value) + 60);
+  --ic-z-index-navigation-item: calc(var(--ic-z-index-base-value) + 70);
+  --ic-z-index-navigation-menu: calc(var(--ic-z-index-base-value) + 70);
+  --ic-z-index-menu: calc(var(--ic-z-index-base-value) + 70);
+  --ic-z-index-side-navigation: calc(var(--ic-z-index-base-value) + 70);
   --ic-z-index-dialog: calc(var(--ic-z-index-base-value) + 100);
   --ic-z-index-toast: calc(var(--ic-z-index-base-value) + 110);
   --ic-z-index-tooltip: calc(var(--ic-z-index-base-value) + 110);
